--- a/gersis-server/server/model-config.json
+++ b/gersis-server/server/model-config.json
@@ -66,5 +66,9 @@
   "Entidade": {
     "dataSource": "mysqlds",
     "public": true
+  },
+  "RelacionamentoEntidade": {
+    "dataSource": "mysqlds",
+    "public": true
   }
 }
